tests/baselines/reference/es6ImportWithoutFromClauseWithExport.errors.txt
tests/cases/compiler/client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(1,15): error TS2307: Cannot find module 'server'.


==== tests/cases/compiler/server.ts (0 errors) ====
    export var a = 10;
    
==== tests/cases/compiler/client.ts (2 errors) ====
    export import "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                  ~~~~~~~~
!!! error TS2307: Cannot find module 'server'.